# service_template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.local  README.md  c_cpp_properties.json  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.template.yaml  config_vars.testing.yaml  config_vars.yaml  config_vars_testing.yaml  dynamic_config_fallback.json  static_config.yaml  static_config.yaml.in
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  main.cpp
tests/: CMakeLists.txt  conftest.py  requirements.txt  test_basic.py  test_service.py
